--- a/2.html
+++ b/2.html
@@ -20,9 +20,9 @@
        <td>
 	                   <marquee><font size ="+2"><b>به قسمت تصاویر خوش آمدید</b></font></marquee></tr>
            </tr>
-                <td><img src="img/pics/pic (1).png"width="200" height="200"><img src="img/pics/pic (2).png"width="200" height="200"><img src="img/pics/pic (3).png"width="200" height="200"><br>
-                <img src="img/pics/pic (4).png"width="200" height="200"><img src="img/pics/pic (5).png"width="200" height="200s"><img src="img/pics/pic (6).png"width="200" height="200"><br>
-                <<img src="img/pics/pic.png"width="200" height="200"><img src="img/pics/pic (1).png"width="200" height="200"><img src="img/pics/pic (2).png"width="200" height="200"><br>
+                <td><img src="img/pics/pic1.png"width="200" height="200"><img src="img/pics/pic2.png"width="200" height="200"><img src="img/pics/pic3.png"width="200" height="200"><br>
+                <img src="img/pics/pic4.png"width="200" height="200"><img src="img/pics/pic5.png"width="200" height="200s"><img src="img/pics/pic (6).png"width="200" height="200"><br>
+                <<img src="img/pics/pic.png"width="200" height="200"><img src="img/pics/pic1.png"width="200" height="200"><img src="img/pics/pic2.png"width="200" height="200"><br>
                 <h5>شما میتوانید از این تصاویر استفاده کرده و در وبلاگ و یا وبسایت خود قرار دهید</h5></td>
                        
         </td>                 
